summary: Scopri le novità della gestione dei cluster ONTAP on-premise in BlueXP. 
---
= Novità dei cluster ONTAP on-premise
:hardbreaks:
:allow-uri-read: 
:nofooter: 
:icons: font
:linkattrs: 
:imagesdir: ./media/


[role="lead"]
Scopri le novità della gestione dei cluster ONTAP on-premise in BlueXP.



== 7 ottobre 2024



=== Supporto per i sistemi ASA R2

Ora puoi scoprire i sistemi NetApp ASA R2 in BlueXP . Dopo aver scoperto un sistema NetApp ASA R2 e aperto l'ambiente di lavoro, verrai indirizzato direttamente a Gestione sistema.

Non sono disponibili altre opzioni di gestione con i sistemi ASA R2. Non è possibile utilizzare la vista Standard e non è possibile attivare i servizi BlueXP.

https://docs.netapp.com/us-en/asa-r2/index.html["Scopri di più sui sistemi ASA R2"^]



== 22 aprile 2024



=== I modelli di volume non sono più supportati

Non è più possibile creare un volume da un modello. Questa azione è stata associata al servizio di correzione BlueXP, che non è più disponibile.



== 30 luglio 2023



=== Creare volumi FlexGroup

Se si gestisce un cluster con un connettore, è ora possibile creare volumi FlexGroup utilizzando l'API BlueXP.

* https://docs.netapp.com/us-en/bluexp-automation/cm/wf_onprem_flexgroup_ontap_create_vol.html["Scopri come creare un volume FlexGroup"^]
* https://docs.netapp.com/us-en/ontap/flexgroup/definition-concept.html["Scopri cos'è un volume FlexGroup"^]




== 2 luglio 2023



=== Rilevamento cluster da My estate

Ora puoi scoprire i cluster ONTAP on-premise da *Canvas > My estate* selezionando un cluster che BlueXP ha scoperto in base ai cluster ONTAP associati all'indirizzo e-mail per il tuo login BlueXP.

https://docs.netapp.com/us-en/bluexp-ontap-onprem/task-discovering-ontap.html#add-a-pre-discovered-cluster["Scopri come scoprire i cluster dalla pagina My estate"].



== 4 maggio 2023



=== Abilitare il backup e ripristino BlueXP
