@@ -516,7 +516,6 @@
   <block id="ad203e818e0c9d7f42f1c260b33875f3" category="sidebar">Webinar sul cloud</block>
   <block id="74702430dfc941eaabc5007d9e5554f6" category="list-text"><block ref="74702430dfc941eaabc5007d9e5554f6" category="inline-link-rx"></block></block>
   <block id="3ebda767e5f86db4657a423fd661132a" category="list-text">L'host del connettore deve consentire connessioni in uscita attraverso la porta 443 (HTTPS) e il cluster ONTAP deve consentire l'accesso HTTP in entrata attraverso la porta 443 alla LIF di gestione cluster.</block>
-  <block id="fde1abb5537b55c34521d414267b3f70" category="section-title">Sistemi ASA r2</block>
   <block id="0bf2301f5cb3996192947186158c2e09" category="paragraph">Dopo aver scoperto un sistema NetApp ASA R2 e aperto l'ambiente di lavoro, verrai indirizzato direttamente a Gestione sistema.</block>
   <block id="d5861f4539296095cd7c9fdfd0c5a2c9" category="paragraph">Non sono disponibili altre opzioni di gestione con i sistemi ASA R2. Non è possibile utilizzare la vista Standard e non è possibile attivare i servizi BlueXP.</block>
   <block id="989977a18a476a92018e04dd60ec37c1" category="inline-link">Scopri di più sui sistemi ASA R2</block>
@@ -537,5 +536,9 @@
   <block id="8166996cb4a59c147200d89a061bb49c" category="paragraph">Queste credenziali NSS sono associate all'ID organizzazione BlueXP  specifico dell'utente. Gli utenti che appartengono all'organizzazione BlueXP  possono accedere a queste credenziali da *supporto &gt; Gestione NSS*.</block>
   <block id="e5182edc3707e8e354c40ab7fa819f39" category="section-title">7 ottobre 2024</block>
   <block id="1e095c69621645fccc8f12cd7f35f6fc" category="section-title">Supporto per i sistemi ASA R2</block>
-  <block id="effcb34ce55a7b0374e99feabbc3c970" category="paragraph">Ora puoi scoprire i sistemi NetApp ASA R2 in BlueXP . Dopo aver scoperto un sistema NetApp ASA R2 e aperto l'ambiente di lavoro, verrai indirizzato direttamente a Gestione sistema.</block>
+  <block id="835e40a074ba47935e3e68e3452eb52f" category="section-title">Limitazioni relative ai sistemi ASA R2</block>
+  <block id="f2fba5567ec0d8ae5addf04c960ba6d0" category="list-text">Il rilevamento dei sistemi ASA R2 non è supportato quando si utilizza BlueXP  in modalità privata.</block>
+  <block id="d26c29507d869d48f4861c9b4bae1f6e" category="paragraph">È ora possibile scoprire i sistemi NetApp ASA R2 in BlueXP  quando si utilizza BlueXP  in modalità standard o privata. Dopo aver scoperto un sistema NetApp ASA R2 e aperto l'ambiente di lavoro, verrai indirizzato direttamente a Gestione sistema.</block>
+  <block id="62bd7572081df25dd3f1f52151883c4a" category="inline-link">Scopri le modalità di implementazione di BlueXP</block>
+  <block id="d3342e15149bfef7fd9289d7025e506e" category="list-text"><block ref="d3342e15149bfef7fd9289d7025e506e" category="inline-link-rx"></block></block>
 </blocks>
